<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="192dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="left|center_horizontal"
                android:textStyle="bold"
                android:text="Service Wifi App" />

            <Switch
                android:id="@+id/switchWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:textColorHighlight="@color/midnight_green_eagle_green"
                android:textColorLink="@color/cerulian_crayola"
                android:onClick="serviceSwitch" />

            <Button
                android:id="@+id/buttonDisableWifi"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="50dp"
                android:onClick="disableWifi"
                android:text="Disable Wifi"
                app:backgroundTint="@color/light_green" />

            <TextView
                android:id="@+id/textViewLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="Waiting..." />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="800dp"
            tools:context=".MainActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/wifi_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/cerulian_crayola"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:onClick="refreshCardWifi" >

                <!--
                In the above cardview widget
                cardelevation property will give elevation to your card view
                card corner radius will provide radius to your card view
                card background color will give background color to your card view
                card max elevation will give the cardview maximum elevation
                card prevent corner overlap will add padding to CardView on v20 and before to prevent intersections between the Card content and rounded corners.
                card use compact padding will add padding in API v21+ as well to have the same measurements with previous versions.
                below are the two widgets imageview and text view we are displaying inside our card view.
                -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/wifi_status_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/wifi_img"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_wifi_issues"
                    android:onClick="refreshCardWifi" />

                <TextView
                    android:id="@+id/wifi_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/wifi_status_due"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/wifi_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/service_status_off"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <ProgressBar
                    android:id="@+id/progressBarWifi"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:indeterminateDrawable="@drawable/progress"
                    android:visibility="invisible"
                    tools:visibility="invisible" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/lan_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wifi_card"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/cerulian_crayola"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:onClick="refreshCardLAN" >

                <!--
                In the above cardview widget
                cardelevation property will give elevation to your card view
                card corner radius will provide radius to your card view
                card background color will give background color to your card view
                card max elevation will give the cardview maximum elevation
                card prevent corner overlap will add padding to CardView on v20 and before to prevent intersections between the Card content and rounded corners.
                card use compact padding will add padding in API v21+ as well to have the same measurements with previous versions.
                below are the two widgets imageview and text view we are displaying inside our card view.
                -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/lan_status_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/lan_img"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/due"
                    android:onClick="refreshCardLAN" />

                <TextView
                    android:id="@+id/lan_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/lan_status_due"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/lan_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/service_status_off"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <ProgressBar
                    android:id="@+id/progressBarLAN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:indeterminateDrawable="@drawable/progress"
                    android:visibility="invisible" />


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
